@@ -1,9 +1,11 @@
 2001-09-04  Peter Williams  <peterw@ximian.com>
 
-	* mail-local.c (mlf_init): Remove accidentally left-in "choke on this"
-	preprocessor thingie.
+	* mail-local.c (mlf_init): Remove accidentally left-in "choke on
+	this" preprocessor thingie.
 	(mail_local_folder_reconfigure): Instead of creating our own local
 	exception, just assert that ex != NULL.
+	(*): Staticize everything that can be and remove some obnoxious
+	prototypes.
 
 2001-08-31  Peter Williams  <peterw@ximian.com>
 
